--- a/myspringmvc/src/main/webapp/WEB-INF/web.xml
+++ b/myspringmvc/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 		 <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+	<!-- myservlet은 DispatcherServlet이 받음 -->
 	<servlet>
 		<servlet-name>myservlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -20,6 +21,7 @@
 			<param-value>/WEB-INF/context/servlet-context.xml</param-value>
 		</init-param>
 	</servlet>
+	<!-- client 요청은 모두 myservlet이 받음 -->
 	<servlet-mapping>
 		<servlet-name>myservlet</servlet-name>
 		<url-pattern>/</url-pattern>
