--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -13,3 +13,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 #log
 logging.level.org.springframework.web=trace
+logging.level.org.springframework.bean=debug
